erDiagram
    USERS {
        int Id PK
        string FirstName
        string LastName
        string Email UK
        string PasswordHash
        string Role
        bool IsActive
    }

    CATEGORIES {
        int Id PK
        string Name UK
    }

    BOOKS {
        int Id PK
        string Title
        string Author
        string Isbn UK
        string Description
        int CategoryId FK
        bool IsDeleted
        datetime DeletedAt
    }

    BOOK_COPIES {
        int Id PK
        int BookId FK
        string InventoryNumber UK
        string Status
    }

    RESERVATIONS {
        int Id PK
        int UserId FK
        int BookId FK
        date ReservationDate
        date PickupDeadline
        string Status
    }

    LOANS {
        int Id PK
        int UserId FK
        int BookCopyId FK
        int ReservationId FK
        date LoanDate
        date ReturnDate
        string Status
    }

    USERS ||--o{ RESERVATIONS : creates
    USERS ||--o{ LOANS : borrows
    CATEGORIES ||--o{ BOOKS : groups
    BOOKS ||--o{ BOOK_COPIES : owns
    BOOKS ||--o{ RESERVATIONS : reserved_as_title
    BOOK_COPIES ||--o{ LOANS : loaned_copy
    RESERVATIONS ||--o| LOANS : fulfilled_by
